--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,19 +1,20 @@
 %======================================================================
 \chapter{Conclusion}
+\label{sec:conclusion}
 %======================================================================
 The goal of this work was to enable 1) library developers to make better
 decisions when designing new APIs, pruning or modifying unused APIs and to refactor their
 libraries; and 2) client developers to make better decisions about library
 upgrades and breaking changes.
 
-Further user evaluations of our VizAPI tool following
+Further user evaluations of our VizAPI tool can establish and improve the
+effectiveness of VizAPI. This can be performed following
 existing techniques~\cite{merino18:_system_liter_review_softw_visual_evaluat}; in
 particular, experiments, where users perform software
-understanding and maintenance tasks can establish and improve the
-effectiveness of VizAPI.
+understanding and maintenance tasks.
 
 
-\subsection{Threats to Validity}
+\section{Threats to Validity}
 Our threats to validity include the usual threat to external validity
 of insufficient sample size or variety---many of our seed libraries
 are JSON parser/generators, although our transitive closures result in
@@ -38,7 +39,7 @@ modularity.
 Finally, our results apply best to Java-like languages, and
 may vary dramatically for other languages.
 
-\subsection{Actionable Outcomes}
+\section{Actionable Outcomes}
 Based on our exploration of API uses and mis-uses, we make some recommendations
 for both API and language/analysis designers.
 
@@ -60,4 +61,4 @@ that APIs are sparsely used, API designers can seek to prune unused APIs;
 %% \item Restrict the declared API to an actually-used subset and support deprecation of unused API bits.
 %% \end{enumerate}
 
-
+We studied API usage in detail in this work and explored its usefulness by presenting two developer-focussed applications of it. We found that clients do not access internal parts of libraries for the most part. We also found that clients use only a small part of existing APIs and also that different clients use different parts of libraries with only a small overlap. This result makes a case for library fission, which we observed has the benefits of reduced dependencies in an application. We also presented the VizAPI visualization tool, which can be used by developers to observe API usage in their components.
