--- a/tables/results/perc-clients-same-methods.tex
+++ b/tables/results/perc-clients-same-methods.tex
@@ -1,23 +1,24 @@
-% latex table generated in R 4.1.1 by xtable 1.8-4 package
-% Fri Oct 22 11:50:18 2021
+% latex table generated in R 4.2.0 by xtable 1.8-4 package
+% Mon Aug 29 11:02:02 2022
 \begin{table}[ht]
 \centering
-\caption{\label{tab:same-method}\% of clients calling same methods} 
-\begingroup\scriptsize
+\begingroup\small
 \begin{tabular}{l!{\color{verylightgray}\vrule}rrr}
- & Total \# & \% Clients & \# Methods \\ 
-Library & clients  & in max-set & in max-set\\
- \arrayrulecolor{verylightgray}\hline
-fastjson & 12 & 25 & 1 \\ 
-  commons-collections & 3 & 67 & 2 \\ 
-  commons-io & 5 & 60 & 1 \\ 
-  joda-time & 4 & 50 & 1 \\ 
-  gson & 4 & 100 & 1 \\ 
-  json & 5 & 60 & 2 \\ 
-  jsoup & 5 & 80 & 4 \\ 
-  slf4j-api & 29 & 45 & 2 \\ 
-  jackson-databind & 15 & 20 & 5 \\ 
-  jackson-core & 5 & 60 & 1 \\ 
+Library & Total No.  & \% Clients calling  & No. of methods  \\ 
+ & of clients & same methods & called by (\%) clients \\
+   \arrayrulecolor{verylightgray}\hline
+fastjson & 26 & 50 & 1 \\ 
+  commons-collections4 & 6 & 50 & 1 \\ 
+  commons-io & 9 & 44 & 1 \\ 
+  joda-time & 9 & 56 & 1 \\ 
+  h2 & 3 & 67 & 13 \\ 
+  gson & 17 & 41 & 1 \\ 
+  json & 4 & 75 & 1 \\ 
+  jsoup & 4 & 75 & 10 \\ 
+  slf4j-api & 89 & 51 & 2 \\ 
+  jackson-databind & 23 & 26 & 1 \\ 
+  jackson-core & 13 & 46 & 4 \\ 
 \end{tabular}
 \endgroup
+\caption{\label{tab:same-method}\% of clients calling same methods} 
 \end{table}
