--- a/tables/results/set-accessible-lib-to-client.tex
+++ b/tables/results/set-accessible-lib-to-client.tex
@@ -1,9 +1,11 @@
 % latex table generated in R 4.1.1 by xtable 1.8-4 package
 % Fri Oct 22 21:21:27 2021
+\begin{landscape}
+\vspace*{\fill}
 \begin{table*}[ht]
 \centering
+\begingroup \small
 \caption{\label{tab:set-accessible-lib-to-client}setAccessible Calls---Library to Client} 
-\begingroup\scriptsize
 \begin{tabular}{ll!{\color{verylightgray}\vrule}rrr!{\color{verylightgray}\vrule}rrrr!{\color{verylightgray}\vrule}r}
 Library & Client & Fields & Constructors & Methods & private & default & protected & public & total \\ 
  \arrayrulecolor{verylightgray}\hline
@@ -26,3 +28,5 @@ Library & Client & Fields & Constructors & Methods & private & default & protect
 \end{tabular}
 \endgroup
 \end{table*}
+\vspace*{\fill}
+\end{landscape}
