--- a/uw-ethesis-frontpgs.tex
+++ b/uw-ethesis-frontpgs.tex
@@ -59,7 +59,7 @@
   % The following is a sample Delaration Page as provided by the GSO
   % December 13th, 2006.  It is designed for an electronic thesis.
   \noindent
-I hereby declare that I am the sole author of this thesis. This is a true copy of the thesis, including any required final revisions, as accepted by my examiners.
+This thesis consists of material all of which I authored or co-authored: see Statement of Contributions included in the thesis. This is a true copy of the thesis, including any required final revisions, as accepted by my examiners.
 
   \bigskip
   
@@ -67,6 +67,25 @@ I hereby declare that I am the sole author of this thesis. This is a true copy o
 I understand that my thesis may be made electronically available to the public.
 
 \cleardoublepage
+
+%  S T A T E M E N T  O F  C O N T R I B U T I O N S
+% -------------------------------
+\begin{center}\textbf{Statement of Contributions}\end{center}
+   \noindent
+This thesis consists mostly of chapters written for conference research paper submission
+(1 rejected, 1 accepted), with some word changes, styling updates and other modifications.
+
+Sruthi Venkatanarayanan was the sole author for Chapter~\ref{sec:applications}, which was written under the
+supervision of Dr. Patrick Lam. Sruthi was responsible for developing the tool that performs the static and dynamic analyses, 
+carrying out data collection and analysis and developing the VizAPI visualization tool.
+Sruthi and Dr. Patrick Lam were co-authors for Chapters~\ref{sec:introduction}, \ref{sec:related}, \ref{sec:apiusage} and \ref{sec:conclusion}.
+  \bigskip
+  
+  \noindent
+I understand that my thesis may be made electronically available to the public.
+
+\cleardoublepage
+
 
 % A B S T R A C T
 % ---------------
@@ -82,7 +101,7 @@ Software projects make use of libraries extensively. Libraries have intended API
 
 \begin{center}\textbf{Acknowledgements}\end{center}
 
-I would like to thank all the people who made this thesis possible.
+
 \cleardoublepage
 
 % D E D I C A T I O N
